# opencl-runtime-loader

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake.yml
scripts/: gen_hybrid_loader_mako.py  loader.cpp.mako
src/: loader.cpp
tests/: CMakeLists.txt  call_all.c
